--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,4 @@ pymatgen==2023.12.18
 pyxtal==0.6.3
 SMACT==2.5.5
 matbench-genmetrics==0.6.1
-matminer==0.9.0
+matminer @ git+https://github.com/hackingmaterials/matminer.git
