--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,6 +25,7 @@ jobs:
           pip install pytest
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
           pip install --upgrade "jax[cpu]"
+          pip install .
       - name: Test with pytest
         run: |
           pytest
