--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,7 +24,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install pytest
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-          pip install --upgrade "jax[cpu]==0.4.25"
+          pip install -U jax
           pip install .
       - name: Test with pytest
         run: |
